==========================================================

     iso2mesh - a simple yet powerful mesh generator

----------------------------------------------------------

iso2mesh ChangeLog:

2008/11/08 (0.5.1, codename: footlong)
        1. added meshing tool binaries for Windows (95-vista)
        2. added meshing tool binaries for Mac OS
        3. tagged all bin/ files and binaries files in sample/
           with -kb option in the cvs

2008/10/30 (0.5, alpha release, codename: footlong)
        1. created a sourceforge project, pointing to 
           the project main page at orbit.
        2. wrote documents and polish file structures
        3. included more sample codes and data
        4. defined a global variable "ISO2MESH_TEMP" to control the 
           temporary file directory; "ISO2MESH_BIN" for bin folder
           location and "ISO2MESH_SESSION" for temporary file prefix
           and enable parallel meshing sessions and restricted user 
           environments
        5. renamed all temporary files as pre_smesh/post_smesh/
           pre_remesh/post_remeshpre_vmesh/post_vmesh to identify
           the processing stage
        6. split vol2mesh into vol2surf and surf2mesh
        7. uploading wiki pages with documentation drafts and 
           examples outputs

2008/10/10 (0.4)
        1. added subroutines for mesh validation and repairing
        2. included JMeshLib for non-manifold node removal

2008/01/10 (0.3)
        1. added vol2mesh and the related scripts
        2. iso2mesh is able to mesh breast geometry from 3D 
           tomosynthesis scan and a mouse head model from CT images.

2008/04/08 (0.2)
        1. qslim produces self-intersecting meshes after 
           simplification, which is not good. It is now replaced
           by CGAL mesh simplification module
        2. modified CGAL mesh simplification code to preserve all
           edges nodes (keep them co-planar)

2007/12/27 (0.1.1)